# fextify

./: .gitignore  Dockerfile  LICENSE  README.md  mythacker.css  package-lock.json  package.json
.github/workflows/: CI.yml
src/: autoresize.js  ckeditor.js  gateway.js  index.html  main.js  styles.css  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/themes/: coffee.css  default.css  gruvbox.css
